# 541-Computer_Graphics

./: .gitignore
FinalProject/: FinalProject.aux  FinalProject.nav  FinalProject.tex  README.md  graphics.aux  visit_contour.py  visit_mpi_test.py  visit_rotate.py  visit_slicing.py  visit_test.py
Project2A/: CMakeLists.txt  project2A.cxx  project2A.tar
Project2B/: CMakeLists.txt  project2B.cxx
differencer/: CMakeLists.txt  differencer.cpp
project1A/: CMakeLists.txt  project1A.cxx
project1B/: CMakeLists.txt  project1B.cxx
project1C/: CMakeLists.txt  get_triangles.cxx  project1C.cxx
project1D/: CMakeLists.txt  project1D.cxx  project1D.cxx_bk  project1D.cxx_whites  reader1d.cxx
project1E/: CMakeLists.txt  project1E.cxx  reader1E.cxx
project1F/: CMakeLists.txt  README.md  project1F.cxx  project1F.tar
project1G/: README.md  grayscaleShader.cu  grayscaleShader_solution.cu  project1G.cu  project1G_prompt.tex  project1G_sobel.cu  project1G_solution.cu  project1G_solution_sobel.cu
